Make tests compile